se comenzo el ordenar por materiales con prestamos pendientes